Fixed text overflow in dropdown menu

--- a/web_src/css/base.css
+++ b/web_src/css/base.css
@@ -1232,6 +1232,8 @@ img.ui.avatar,
 
 .ui.menu .ui.dropdown.item .menu .item {
   width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .ui.dropdown .menu > .item > .floating.label {
